[package]
name = "markdown_view_leptos"
version = "0.1.2"
edition = "2021"
description = "Render Markdown with embedded Leptos components via a simple macro (MDX-like for Leptos)."
license = "MIT"
authors = ["Victor Ferreira da Silva <hi@victorfds.com>"]
repository = "https://github.com/victorfds/markdown_view_leptos"
documentation = "https://docs.rs/markdown_view_leptos"
readme = "README.md"
keywords = ["leptos", "markdown", "mdx", "ssr", "wasm"]
categories = ["web-programming", "template-engine", "wasm"]

exclude = ["examples/**/*"]

[dependencies]
markdown_view_leptos_macro = { version = "0.1.2", path = "markdown_view_leptos_macro" }
pulldown-cmark = { version = "0.13.0", default-features = false, features = [
    "html",
] }
