[package]
name = "markdown_view_leptos"
version = "0.1.83"
edition = "2021"
description = "Render Markdown with embedded Leptos components via a simple macro (MDX-like for Leptos)."
license = "MIT"
authors = ["Victor Ferreira da Silva <hi@victorfds.com>"]
repository = "https://github.com/victorfds/markdown_view_leptos"
documentation = "https://docs.rs/markdown_view_leptos"
readme = "README.md"
keywords = ["leptos", "markdown", "mdx", "ssr", "wasm"]
categories = ["web-programming", "template-engine", "wasm"]

exclude = ["examples/**/*"]

[lib]
proc-macro = true

[dependencies]
pulldown-cmark = { version = "0.13.0", default-features = false, features = [
    "html",
] }
proc-macro2 = { version = "1.0", features = ["proc-macro", "span-locations"] }
quote = "1.0"
reqwest = { version = "0.12", default-features = false, features = [
    "blocking",
    "rustls-tls",
] }
syn = { default-features = false, version = "2.0", features = [
    "full",
    "parsing",
    "proc-macro",
] }
