[package]
name = "markdown_view_leptos_macro"
version = "0.1.2"
edition = "2021"
description = "Procedural macro backend for markdown_view_leptos."
license = "MIT"
authors = ["Victor Ferreira da Silva <hi@victorfds.com>"]
repository = "https://github.com/victorfds/markdown_view_leptos"
documentation = "https://docs.rs/markdown_view_leptos"
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
syn = { default-features = false, version = "2.0", features = ["full", "parsing", "proc-macro"] }
quote = "1.0"
proc-macro2 = { version = "1.0", features = ["proc-macro"] }
pulldown-cmark = { version = "0.13.0", default-features = false, features = ["html"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
