[package]
name = "markdown-csr-example"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.8.8", features = ["csr"] }
markdown_view_leptos = { path = "../.." }
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "ImageData",
    "MouseEvent",
] }

[profile.release]
opt-level = "z"
codegen-units = 1
lto = true
